<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/inner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/inner"
            android:contentDescription="@string/img_desc"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_height="wrap_content"
                tools:text="@string/hint_name" />

            <TextView
                android:id="@+id/user_bio"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inner"
                tools:text="@string/hint_bio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_repo"
                    android:layout_width="@dimen/nonexistent"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/hint_repo" />

                <TextView
                    android:id="@+id/user_gist"
                    android:layout_width="@dimen/nonexistent"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/hint_gist" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_followers"
                    android:layout_width="@dimen/nonexistent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    tools:text="@string/hint_followers" />

                <TextView
                    android:id="@+id/user_following"
                    android:layout_width="@dimen/nonexistent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_weight="1"
                    tools:text="@string/hint_following" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/list_repo"
            android:layout_margin="@dimen/inner"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>
